--- a/configuration/accounts/production/application.yml
+++ b/configuration/accounts/production/application.yml
@@ -3,7 +3,7 @@ server:
 
 accounts:
   datasource:
-    url: jdbc:postgresql://localhost:32768/accounts
-    username: postgres
-    password: postgres
+    url: jdbc:mysql://localhost:3306/account?serverTimezone=Europe/Warsaw&useSSL=false&allowPublicKeyRetrieval=true
+    username: cezaryjanicki
+    password: cezaryjanicki00
     ddl-mode: update
