changes to application.yml adding customers support

--- a/configuration/accounts/production/application.yml
+++ b/configuration/accounts/production/application.yml
@@ -10,3 +10,12 @@ accounts:
 
 application:
     allow-get-accounts: true
+
+customers:
+  datasource:
+    url: jdbc:mysql://localhost:3306/customer?serverTimezone=Europe/Warsaw&useSSL=false&allowPublicKeyRetrieval=true
+    username: ${MYSQL_LOGIN}
+    password: ${MYSQL_PASSWORD}
+    ddl-mode: update
+
+  allow-get-customers: true
